[package]
name = "astro-core"
version = "0.1.0"
edition = "2021"
authors = ["Volodymyr Lekhman"]
description = "Rust wrapper around the Swiss Ephemeris C library to compute Sun, Moon, and Ascendant signs from UTC birth data."
license-file = "src/swisseph/LICENSE"
readme = "README.md"
repository = "https://github.com/volodymyrlekhman/astro-core"
homepage = "https://github.com/volodymyrlekhman/astro-core"
keywords = ["astrology", "ephemeris", "swisseph", "ffi", "astro"]
categories = ["science", "external-ffi-bindings"]
include = [
    "Cargo.toml",
    "README.md",
    "AGENTS.md",
    "build.rs",
    "src/lib.rs",
    "src/swisseph/*.c",
    "src/swisseph/*.h",
    "src/swisseph/LICENSE",
    "examples/basic.rs",
]

[lib]
name = "astro_core"
crate-type = ["rlib"]

[build-dependencies]
cc = "1"

[dependencies]
libc = "0.2"
thiserror = "1"
